--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -421,13 +421,10 @@ footer {
 #copyright {
   font-size: 0.8em;
   background-color: #fff;
-  border-top: 1px solid #ddd!important;
-  border-left: 1px solid #ddd!important;
-  border-right: 1px solid #ddd!important;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 20px;
 }
 .navbar .nav {
   margin:2px 0px;
