--- a/public/css/veda.css
+++ b/public/css/veda.css
@@ -1,10 +1,4 @@
-html {
-  height: 100%;
-}
-
 body {
-  height: 100%;
-  position: relative;
   font-family:"Ubuntu",Tahoma,"Helvetica Neue",Helvetica,Arial,sans-serif;
   /*color: #334;*/
   color: #333;
@@ -423,8 +417,7 @@ footer {
   background-color: #fff;
   position: absolute;
   bottom: 0;
-  width: 100%;
-  height: 20px;
+  padding:5px;
 }
 .navbar .nav {
   margin:2px 0px;
