--- a/public/css/veda-lng.css
+++ b/public/css/veda-lng.css
@@ -42,7 +42,7 @@ body {
 }
 .show-lng-control {
   padding: 5px 7px;
-  box-shadow: 2px 2px 2px #ccc;
+  box-shadow: 1px 1px 2px #999;
   position: absolute;
   z-index: 4000;
   top: 10px;
@@ -50,7 +50,7 @@ body {
 }
 .hide-lng-control {
   padding: 5px 7px;
-  box-shadow: 2px 2px 2px #ccc;
+  box-shadow: 1px 1px 2px #999;
   position: absolute;
   z-index: 5000;
   top: 10px;
