--- a/public/css/veda-lng.css
+++ b/public/css/veda-lng.css
@@ -18,9 +18,11 @@ body {
   position: absolute;
   z-index: 4000;
   height: 100%;
-  padding: 0 15px;
+  padding: 0 15px 20px 15px;
   background-color: #fff;
   box-shadow: 3px 0px 3px #ccc;
+  overflow-x: auto;
+  overflow-y: auto;
 }
 .lng-control.hide {
   display: none;
@@ -39,9 +41,6 @@ body {
   .lng-control {
     width: 100%;
   }
-  .hide-lng-control {
-    right: 10px!important;
-  }
 }
 .show-lng-control {
   padding: 5px 7px;
@@ -57,5 +56,5 @@ body {
   position: absolute;
   z-index: 5000;
   top: 10px;
-  right: -40px;
+  right: 10px;
 }
